[package]
name = "pstoedit"
version = "0.1.0"
authors = ["Han Mertens <hanmertens@outlook.com>"]
edition = "2018"
license = "GPL-2.0-or-later"
description = "Rust bindings to pstoedit"
repository = "https://github.com/hanmertens/pstoedit-rs"
readme = "README.md"
keywords = ["pstoedit"]
categories = ["api-bindings", "multimedia::images"]

[dependencies]
pstoedit-sys = { version = "0.1.0", path = "pstoedit-sys" }
