[package]
name = "pstoedit-sys"
version = "0.1.1"
authors = ["Han Mertens <hanmertens@outlook.com>"]
edition = "2018"
links = "pstoedit"
license = "GPL-2.0-or-later"
description = "Native bindings to pstoedit"
repository = "https://github.com/hanmertens/pstoedit-rs"
readme = "README.md"
keywords = ["pstoedit", "sys", "ffi"]
categories = ["external-ffi-bindings", "multimedia::images"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
pstoedit_4_01 = ["pstoedit_4_00"]
pstoedit_4_00 = []
